stateDiagram-v2
    %% L++ State Diagram: L++ Schema Migrator
    [*] --> idle
    idle --> loaded : LOAD [blueprint is None]
    loaded --> loaded : LOAD
    loaded --> planning : SET_TARGET [blueprint is not None]
    loaded --> planning : MIGRATE_LATEST [blueprint is not None]
    planning --> planned : PLAN
    loaded --> planned : PLAN_TO [blueprint is not None]
    loaded --> planned : PLAN_LATEST [blueprint is not None]
    planned --> migrating : EXECUTE [migration_plan is not None ...]
    migrating --> validating : VALIDATE [migrated_blueprint is not None]
    migrating --> validating : AUTO_CONTINUE [migrated_blueprint is not None]
    idle --> batch_mode : BATCH
    idle --> batch_mode : BATCH_TO
    planned --> loaded : BACK
    planned --> planning : REPLAN
    loaded --> idle : UNLOAD
    planned --> idle : UNLOAD